# comic-reader-home

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  manage.py  on-save.sh  package.json  pyproject.toml  pytest.ini  requirements.txt  webpack.config.js
.circleci/: config.yml
comicreader/: celery.py  context_processors.py  local_settings.py  local_settings.py.example  settings.py  settings_test.py  test_settings.py  urls.py  wsgi.py
comicreader/settings/: common.py  test.py
core/: context_processors.py  settings.py  wsgi.py
reader/: admin.py  api.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
reader/application/: file_items.py  read.py
reader/domain/: __init__.py  _operations.py  _queries.py  bookmarks.py  file_handler.py  models.py  queries.py  repository.py
reader/migrations/: 0001_initial.py  0002_auto_20180121_2347.py  0003_favorite.py  0004_auto_20180124_2223.py  0005_fileitem.py  0006_auto_20180516_1831.py  0007_auto_20190207_2046.py  0007_auto_20190219_1818.py  0008_auto_20200419_1859.py  0009_auto_20200419_1918.py  0010_fileitem_furthest_read_page.py  0011_auto_20200802_1023.py  0012_fileitem_is_read.py  0013_auto_20201219_0912.py  0014_alter_fileitem_file_type_alter_fileitem_id.py  (+2 more)
reader/views/: api.py  (+2 more)
requirements/: local.txt
scripts/: docker_tests.sh  run.sh  run_celery.sh  run_launchctl.sh  run_rabbitmq.sh  run_tests.sh  stop_rabbitmq.sh
static/: manifest.json
tests/: conftest.py  settings.py  test_views.py
(+57 files in other folders)
